# thanks-dependencies

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: fetcher.rs  main.rs  readme.rs
src/registry/: content.rs  crates_io.rs  mod.rs
