[package]
name = "thanks-dependencies"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/keiya01/thanks-dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crates_io"]
crates_io = []

[dependencies]
async-recursion = "1.0.2"
cargo_toml = "0.14.0"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.25"
futures-util = "0.3.25"
serde = "1.0.152"
surf = "2.3.2"
